--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -56,6 +56,17 @@
   grid-template-rows: repeat(1, 1fr);
 }
 
+.content-table {
+  overflow-x: auto;
+  display: block;
+  width: 100%;
+}
+.content-table table {
+  width: 100%;
+  display: block;
+  white-space: nowrap;
+}
+
 @media screen and (max-width: 1240px) {
   .container {
     width: 100%;
@@ -64,7 +75,7 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .container.flex {
     gap: 16px;
     flex-direction: column !important;
@@ -193,7 +204,7 @@
   width: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .site-footer .footer-content {
     flex-direction: column;
     gap: 0;
@@ -265,14 +276,14 @@
 .navigation.pagination .page-numbers.prev,
 .navigation.pagination a.page-numbers.prev {
   position: absolute;
-  margin: 0;
   left: 0;
+  border: 0;
 }
 .navigation.pagination .page-numbers.next,
 .navigation.pagination a.page-numbers.next {
   position: absolute;
-  margin: 0;
   right: 0;
+  border: 0;
 }
 .navigation.pagination .page-numbers.current {
   background: var(--jelly-color-primary);
@@ -365,53 +376,6 @@
   border-color: var(--jelly-color-border);
   height: 40px;
   padding: 8px 16px;
-}
-
-/*
-* 回到顶部按钮
-*/
-.totop-button {
-  position: fixed;
-  right: 48px;
-  bottom: 32px;
-  height: 46px;
-  width: 46px;
-  cursor: pointer;
-  display: block;
-  border-radius: 50px;
-  box-shadow: inset 0 0 0 2px var(--jelly-color-border);
-  z-index: 10000;
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(15px);
-  transition: all 200ms linear;
-}
-.totop-button.active-progress {
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
-}
-.totop-button .arrow-up {
-  position: absolute;
-  text-align: center;
-  line-height: 46px;
-  font-size: 20px;
-  color: var(--jelly-color-text);
-  left: 11px;
-  top: 11px;
-  height: 24px;
-  width: 24px;
-  cursor: pointer;
-  display: block;
-  z-index: 1;
-  transition: all 200ms linear;
-}
-.totop-button .progress-circle path {
-  fill: #fff;
-  stroke: var(--jelly-color-primary);
-  stroke-width: 4;
-  box-sizing: border-box;
-  transition: all 200ms linear;
 }
 
 /*
@@ -535,37 +499,6 @@
 }
 
 /*
-* 分享按钮
-*/
-.share-buttons {
-  display: flex;
-  gap: 8px;
-  align-items: center;
-  margin: 16px 0;
-}
-.share-buttons .share-title {
-  font-size: 14px;
-  color: var(--jelly-color-description);
-}
-.share-buttons .share-toggle {
-  border-radius: 50%;
-  width: 28px;
-  height: 28px;
-  border: 1px solid var(--jelly-color-border);
-  text-align: center;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-.share-buttons .share-toggle:hover {
-  border-color: var(--jelly-color-primary);
-  background-color: var(--jelly-color-primary);
-  color: var(--jelly-color-white);
-}
-.share-buttons .share-toggle svg {
-  padding-top: 5px;
-}
-
-/*
 * 相关文章
 */
 .related-posts {
@@ -607,8 +540,212 @@
   background-color: var(--jelly-color-description);
 }
 
+.categories-widget .categories-title {
+  margin-bottom: 18px;
+}
+.categories-widget ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.categories-widget li {
+  margin: 0;
+  padding: 0;
+}
+
+.post-categories:hover .categories-list::-webkit-scrollbar-thumb {
+  background-color: var(--jelly-color-primary);
+}
+.post-categories .categories-list {
+  font-size: 14px;
+  max-height: 400px;
+  overflow-y: auto;
+}
+.post-categories .categories-list::-webkit-scrollbar {
+  width: 3px;
+}
+.post-categories .categories-list::-webkit-scrollbar-track {
+  background-color: #e5e5e5;
+}
+.post-categories .categories-list::-webkit-scrollbar-thumb {
+  background-color: #999;
+}
+.post-categories .categories-list li {
+  margin: 0;
+  border-bottom: 1px solid var(--jelly-color-border);
+}
+.post-categories .categories-list li.active {
+  background: var(--jelly-color-primary);
+}
+.post-categories .categories-list li.active a {
+  color: var(--jelly-color-white);
+  font-weight: 600;
+}
+.post-categories .categories-list a {
+  display: block;
+  padding: 8px 12px;
+  color: var(--jelly-color-description);
+}
+.post-categories .categories-list a:hover {
+  color: var(--jelly-color-primary);
+}
+
+.primary-menu {
+  z-index: 99;
+}
+.primary-menu ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+}
+.primary-menu .menu-list {
+  display: flex;
+}
+.primary-menu li {
+  margin: 0;
+}
+.primary-menu li.current_page_item a {
+  color: var(--jelly-color-primary);
+}
+.primary-menu a {
+  display: block;
+  box-sizing: border-box;
+  background-color: #fff;
+  padding: 8px 16px;
+  font-weight: 600;
+  color: var(--jelly-color-title);
+}
+.primary-menu a:hover {
+  color: var(--jelly-color-primary);
+}
+.primary-menu .menu-toggle {
+  box-sizing: border-box;
+  padding: 6px;
+  border-radius: 0;
+  border: 0;
+  background-color: transparent;
+  color: var(--jelly-color-title);
+  line-height: 1;
+  min-height: unset;
+  display: none;
+  text-align: center;
+}
+
 /*
-* 文章卡片
+* 分享按钮
+*/
+.share-buttons {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  margin: 16px 0;
+  color: var(--jelly-color-description);
+}
+.share-buttons .share-title {
+  font-size: 14px;
+}
+.share-buttons .share-toggle {
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border: 1px solid var(--jelly-color-border);
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.share-buttons .share-toggle:hover {
+  border-color: var(--jelly-color-primary);
+  background-color: var(--jelly-color-primary);
+  color: var(--jelly-color-white);
+}
+.share-buttons .ri-icon {
+  color: inherit;
+  font-size: 18px;
+}
+
+/*
+* 回到顶部按钮
+*/
+.totop-button {
+  position: fixed;
+  right: 48px;
+  bottom: 32px;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
+  display: block;
+  border-radius: 50px;
+  box-shadow: inset 0 0 0 2px var(--jelly-color-border);
+  z-index: 10000;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(15px);
+  transition: all 200ms linear;
+}
+.totop-button.active-progress {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+.totop-button .arrow-up {
+  position: absolute;
+  text-align: center;
+  line-height: 46px;
+  font-size: 20px;
+  color: var(--jelly-color-text);
+  left: 11px;
+  top: 11px;
+  height: 24px;
+  width: 24px;
+  cursor: pointer;
+  display: block;
+  z-index: 1;
+  transition: all 200ms linear;
+}
+.totop-button .progress-circle path {
+  fill: #fff;
+  stroke: var(--jelly-color-primary);
+  stroke-width: 4;
+  box-sizing: border-box;
+  transition: all 200ms linear;
+}
+
+/*
+* 联系列表
+*/
+.contact-list {
+  font-style: normal;
+}
+.contact-list .contact-item {
+  display: flex;
+  align-items: center;
+  margin: 12px 0;
+}
+.contact-list .contact-icon {
+  padding: 12px;
+  background-color: rgba(128, 128, 128, 0.1);
+  border-radius: var(--jelly-border-radius-lg);
+  color: var(--jelly-color-primary);
+  line-height: 1;
+  margin-right: 12px;
+}
+.contact-list .ri-icon {
+  font-size: 24px;
+}
+.contact-list .contact-link {
+  color: inherit;
+}
+.contact-list .contact-link:hover {
+  color: var(--jelly-color-primary);
+}
+.contact-list .contact-text {
+  margin: 0;
+}
+
+/*
+* 循环卡片
 */
 .loop-card {
   width: 100%;
@@ -698,166 +835,75 @@ nav.breadcrumb .last {
   color: var(--jelly-color-description);
 }
 
-.categories-widget .categories-title {
-  margin-bottom: 18px;
+/*
+* 页面Banner
+*/
+.page-banner {
+  padding: 32px var(--jelly-side-width, 16px);
+  box-sizing: border-box;
+  background-color: #313131;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  text-align: center;
 }
-.categories-widget ul {
-  list-style: none;
-  padding: 0;
+.page-banner h1 {
   margin: 0;
+  color: #fff;
 }
-.categories-widget li {
-  margin: 0;
-  padding: 0;
-}
-
-.post-categories:hover .categories-list::-webkit-scrollbar-thumb {
-  background-color: var(--jelly-color-primary);
-}
-.post-categories .categories-list {
-  font-size: 14px;
-  max-height: 400px;
-  overflow-y: auto;
-}
-.post-categories .categories-list::-webkit-scrollbar {
-  width: 3px;
-}
-.post-categories .categories-list::-webkit-scrollbar-track {
-  background-color: #e5e5e5;
-}
-.post-categories .categories-list::-webkit-scrollbar-thumb {
-  background-color: #999;
-}
-.post-categories .categories-list li {
-  margin: 0;
-  border-bottom: 1px solid var(--jelly-color-border);
-}
-.post-categories .categories-list li.active {
-  background: var(--jelly-color-primary);
-}
-.post-categories .categories-list li.active a {
-  color: var(--jelly-color-white);
-  font-weight: 600;
-}
-.post-categories .categories-list a {
+.page-banner::before {
+  content: "";
   display: block;
-  padding: 8px 12px;
-  color: var(--jelly-color-description);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
 }
-.post-categories .categories-list a:hover {
-  color: var(--jelly-color-primary);
+.page-banner nav.breadcrumb {
+  border: 0;
+}
+.page-banner nav.breadcrumb p {
+  width: auto;
+  margin: 0;
+  padding: 0;
+  color: #fff;
+}
+.page-banner nav.breadcrumb a {
+  color: #fff;
+}
+.page-banner nav.breadcrumb .last {
+  color: #fff;
 }
 
 /*
 * 全局表单
 */
-.jelly-global-form {
+.inquiry-form {
   margin: 24px 0;
 }
-.jelly-global-form .form-title {
+.inquiry-form .form-title {
   font-size: 16px;
   margin-bottom: 18px;
 }
 
-.contact-list {
-  font-style: normal;
-}
-.contact-list .contact-item {
-  display: flex;
-  align-items: center;
-  margin: 12px 0;
-}
-.contact-list .contact-icon {
-  padding: 12px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: var(--jelly-border-radius-lg);
-  color: inherit;
-  line-height: 1;
-  margin-right: 12px;
-}
-.contact-list .ri-icon {
-  font-size: 24px;
-}
-.contact-list .contact-link {
-  color: inherit;
-}
-.contact-list .contact-link:hover {
-  color: var(--jelly-color-primary);
-}
-.contact-list .contact-text {
-  margin: 0;
-}
-
-.primary-menu {
-  z-index: 99;
-}
-.primary-menu ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-}
-.primary-menu .menu-list {
-  display: flex;
-}
-.primary-menu li {
-  margin: 0;
-}
-.primary-menu li.current_page_item a {
-  color: var(--jelly-color-primary);
-}
-.primary-menu a {
-  display: block;
-  box-sizing: border-box;
-  background-color: #fff;
-  padding: 8px 16px;
-  font-weight: 600;
-  color: var(--jelly-color-title);
-}
-.primary-menu a:hover {
-  color: var(--jelly-color-primary);
-}
-.primary-menu .menu-toggle {
-  box-sizing: border-box;
-  padding: 6px;
-  border-radius: 0;
-  border: 0;
-  background-color: transparent;
-  color: var(--jelly-color-title);
-  line-height: 1;
-  min-height: unset;
-  display: none;
-  text-align: center;
-}
-
-.social-media {
-  display: flex;
-  align-items: center;
-}
-.social-media .social-item {
-  display: block;
-  padding: 8px;
-  font-size: 18px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: var(--jelly-border-radius-lg);
-  color: inherit;
-  line-height: 1;
-  margin-left: 12px;
-}
-.social-media .social-item:hover {
-  background-color: var(--jelly-color-primary);
-}
-
-@media (max-width: 1240px) {
-  .jelly-content-table {
-    overflow-x: auto;
-    display: block;
-    width: 100%;
+@media screen and (min-width: 767px) {
+  .inquiry-form {
+    position: sticky;
+    top: 140px;
   }
-  .jelly-content-table table {
-    width: 100%;
-    display: block;
-    white-space: nowrap;
+}
+@media screen and (min-width: 1240px) {
+  .page-banner {
+    min-height: 300px;
+  }
+  .page-banner h1 {
+    font-size: 72px;
   }
 }
 @media screen and (max-width: 1240px) {
@@ -870,6 +916,9 @@ nav.breadcrumb .last {
   .primary-menu .menu-toggle {
     display: block;
   }
+  .page-banner {
+    min-height: 200px;
+  }
 }
 @media screen and (max-width: 767px) {
   .totop-button {
@@ -878,6 +927,9 @@ nav.breadcrumb .last {
   }
   .totop-button.active-progress {
     transform: scale(1.1) translateY(0);
+  }
+  .page-banner {
+    min-height: 150px;
   }
   .jelly-related-posts .jelly-related-posts-list {
     flex-direction: column;
