一点样式修改

--- a/woocommerce/css/w-front-end.css
+++ b/woocommerce/css/w-front-end.css
@@ -248,6 +248,10 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    overflow-y: auto;
+  }
+  .woocommerce main.product-page div.images .flex-control-nav::-webkit-scrollbar {
+    width: 0;
   }
   .woocommerce main.product-page div.images .flex-control-thumbs li {
     width: 100%;
