--- a/assets/fonts/remixicon/remixicon.less
+++ b/assets/fonts/remixicon/remixicon.less
@@ -8,12 +8,12 @@
 
 @font-face {
     font-family: "remixicon";
-    src: url('remixicon.eot?t=1746762414760'); /* IE9*/
-    src: url('remixicon.eot?t=1746762414760#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url("remixicon.woff2?t=1746762414760") format("woff2"),
-    url("remixicon.woff?t=1746762414760") format("woff"),
-    url('remixicon.ttf?t=1746762414760') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-    url('remixicon.svg?t=1746762414760#remixicon') format('svg'); /* iOS 4.1- */
+    src: url('remixicon.eot?t=1747451762470'); /* IE9*/
+    src: url('remixicon.eot?t=1747451762470#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url("remixicon.woff2?t=1747451762470") format("woff2"),
+    url("remixicon.woff?t=1747451762470") format("woff"),
+    url('remixicon.ttf?t=1747451762470') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+    url('remixicon.svg?t=1747451762470#remixicon') format('svg'); /* iOS 4.1- */
     font-display: swap;
 }
 
@@ -63,4 +63,7 @@
 .ri-corner-down-right-line:before { content: "\f309"; }
 .ri-tiktok-line:before { content: "\f373"; }
 .ri-facebook-circle-fill:before { content: "\ecba"; }
+.ri-arrow-down-s-line:before { content: "\ea4e"; }
+.ri-home-4-line:before { content: "\ee1d"; }
+.ri-close-line:before { content: "\eb99"; }
 }
