--- a/assets/dev/header.css
+++ b/assets/dev/header.css
@@ -27,7 +27,7 @@
   -o-object-fit: contain;
      object-fit: contain;
 }
-.site-header .jelly-container {
+.site-header .container {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -37,5 +37,4 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 24px;
 }/*# sourceMappingURL=header.css.map */
