--- a/assets/dev/header.scss
+++ b/assets/dev/header.scss
@@ -28,7 +28,7 @@
             object-fit: contain;
         }
     }
-    .jelly-container {
+    .container {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -38,7 +38,6 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 24px;
     }
 
 }
