--- a/assets/dev/widget.scss
+++ b/assets/dev/widget.scss
@@ -256,47 +256,96 @@
 }
 
 .primary-menu {
-    z-index: 99;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 24px;
     ul {
         margin: 0;
         padding: 0;
         list-style: none;
         display: flex;
     }
-    .menu-list {
-        display: flex;
-    }
+
     li {
         margin: 0;
-        &.current_page_item {
-            a {
-                color: var(--jelly-color-primary);
+        position: relative;
+
+        &:hover > .sub-menu {
+            display: block;
+        }
+
+        &.current_page_item > a {
+            color: var(--jelly-color-primary);
+        }
+
+        &.menu-item-has-children > a {
+            &::after {
+                content: "\EA78";
+                font-size: 16px;
+                font-family: "remixicon" !important;
+                font-style: normal;
+                display: inline-block;
+                margin-left: 8px;
+                transform: rotate(90deg);
+                transition: all 0.3s ease-in-out;
+            }
+
+            &:hover::after {
+                transform: rotate(180deg);
             }
         }
     }
+
     a {
         display: block;
-        box-sizing: border-box;
-        background-color: #fff;
         padding: 8px 16px;
         font-weight: 600;
         color: var(--jelly-color-title);
+        background-color: #fff;
+        box-sizing: border-box;
+
         &:hover {
             color: var(--jelly-color-primary);
         }
     }
-    .menu-toggle {
-        box-sizing: border-box;
-        padding: 6px;
-        border-radius: 0;
-        border: 0;
-        background-color: transparent;
-        color: var(--jelly-color-title);
-        line-height: 1;
-        min-height: unset;
+
+    .sub-menu {
         display: none;
-        text-align: center;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: #fff;
+        white-space: nowrap;
+        box-shadow:
+            0 1px 2px -2px rgba(0, 0, 0, 0.16),
+            0 3px 6px 0 rgba(0, 0, 0, 0.12),
+            0 5px 12px 4px rgba(0, 0, 0, 0.09);
+
+        a {
+            font-weight: 400;
+        }
+
+        .sub-menu {
+            top: 0;
+            left: 100%;
+
+            &.open-left {
+                left: auto;
+                right: 100%;
+            }
+        }
     }
+
+    .menu-close {
+        display: none; // 桌面不显示
+    }
+
+
+}
+.menu-toggle{
+    display: none;
 }
 
 /*
@@ -581,19 +630,118 @@ nav.breadcrumb {
     nav.breadcrumb p {
         width: 100%;
     }
-    .primary-menu {
-        .menu-list {
-            display: none;
+
+    .menu-toggle {
+        display: block;
+        box-sizing: border-box;
+        padding: 6px;
+        border: none;
+        background: transparent;
+        color: var(--jelly-color-title);
+        line-height: 1;
+        text-align: center;
+        &:hover{
+            background: none;
+            border: 0;
+            color: var(--jelly-color-title);
         }
-        .menu-toggle {
+        .ri-menu-line{
+            font-size: 20px;
+        }
+    }
+
+    .primary-menu {
+        position: fixed;
+        top: 0;
+        right: -360px;
+        width: 300px;
+        height: 100%;
+        padding: 1rem;
+        background-color: #fff;
+        box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3);
+        overflow-y: auto;
+        transition: right 0.3s ease-in-out;
+        z-index: 1001;
+        display: block;
+
+        &.active {
+            right: 0;
+        }
+
+        ul {
+            display: block;
+
+            > li {
+                border-bottom: 1px solid var(--jelly-color-border);
+            }
+        }
+
+        .sub-menu {
+            display: block;
+            position: relative !important;
+            top: unset !important;
+            left: unset !important;
+            width: 100%;
+            box-shadow: none;
+            overflow: hidden;
+            height: auto;
+            max-height: 0;
+            transition: max-height 1s ease-in-out;
+            padding-left: 12px;
+            overflow: hidden;
+            > li {
+                border-bottom: 0;
+            }
+        }
+
+        .submenu-open > .sub-menu {
+            max-height: 999px;
+        }
+
+        .menu-actions {
+            position: absolute;
+            top: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            left: 0;
+            padding: 16px;
+            box-sizing: border-box;
+        }
+
+        .menu-close {
+            display: block;
+            background: transparent;
+            border: none;
+            font-size: 20px;
+            color: var(--jelly-color-title);
+            cursor: pointer;
+        }
+
+        .menu-container{
+            margin: 64px 0;
+        }
+    }
+
+    .menu-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+        display: none;
+
+        &.active {
             display: block;
         }
     }
-    
-    .page-banner{
+
+    .page-banner {
         min-height: 200px;
     }
-
 }
 
 @media screen and (max-width: 767px) {
@@ -605,7 +753,7 @@ nav.breadcrumb {
         }
     }
 
-    .page-banner{
+    .page-banner {
         min-height: 150px;
     }
 
