--- a/assets/fonts/remixicon/remixicon.css
+++ b/assets/fonts/remixicon/remixicon.css
@@ -8,12 +8,12 @@
 
 @font-face {
     font-family: "remixicon";
-    src: url('remixicon.eot?t=1747451762470'); /* IE9*/
-    src: url('remixicon.eot?t=1747451762470#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url("remixicon.woff2?t=1747451762470") format("woff2"),
-    url("remixicon.woff?t=1747451762470") format("woff"),
-    url('remixicon.ttf?t=1747451762470') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-    url('remixicon.svg?t=1747451762470#remixicon') format('svg'); /* iOS 4.1- */
+    src: url('remixicon.eot?t=1747463349067'); /* IE9*/
+    src: url('remixicon.eot?t=1747463349067#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url("remixicon.woff2?t=1747463349067") format("woff2"),
+    url("remixicon.woff?t=1747463349067") format("woff"),
+    url('remixicon.ttf?t=1747463349067') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+    url('remixicon.svg?t=1747463349067#remixicon') format('svg'); /* iOS 4.1- */
     font-display: swap;
 }
 
@@ -65,3 +65,4 @@
 .ri-arrow-down-s-line:before { content: "\ea4e"; }
 .ri-home-4-line:before { content: "\ee1d"; }
 .ri-close-line:before { content: "\eb99"; }
+.ri-question-answer-line:before { content: "\f043"; }
