--- a/assets/dev/layout.css
+++ b/assets/dev/layout.css
@@ -67,6 +67,24 @@
   white-space: nowrap;
 }
 
+.site-header {
+  position: relative;
+  padding: 8px 0;
+  box-sizing: border-box;
+}
+.site-header .container {
+  min-height: 60px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.site-header .header-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 @media screen and (max-width: 1240px) {
   .container {
     width: 100%;
