--- a/assets/dev/layout.scss
+++ b/assets/dev/layout.scss
@@ -71,6 +71,24 @@
     }
 }
 
+.site-header {
+    position: relative;
+    padding: 8px 0;
+    box-sizing: border-box;
+    .container {
+        min-height: 60px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .header-content {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+}
+
 @media screen and (max-width: 1240px) {
     .container {
         width: 100%;
