--- a/assets/dev/widget.scss
+++ b/assets/dev/widget.scss
@@ -513,6 +513,7 @@ nav.breadcrumb {
         padding-top: 56.25%; // 16:9 比例 (9 / 16 * 100%)
         overflow: hidden;
         border-radius: 6px;
+        background-color: #e5e5e5;
         img {
             position: absolute;
             top: 0;
