--- a/assets/dev/page.scss
+++ b/assets/dev/page.scss
@@ -30,9 +30,9 @@
         vertical-align: top;
     }
     .post {
-        h1 {
-            margin-top: 0;
-        }
+        // h1 {
+        //     margin-top: 0;
+        // }
         p {
             a {
                 text-decoration: underline;
