--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -311,9 +311,6 @@
   line-height: 0;
   vertical-align: top;
 }
-.post-page .post h1 {
-  margin-top: 0;
-}
 .post-page .post p a {
   text-decoration: underline;
 }
@@ -658,15 +655,19 @@ nav.breadcrumb .separator {
   justify-content: space-between;
   margin: 24px 0;
 }
-.post-navigation p {
+.post-navigation .navigation-title {
   margin: 0;
   color: inherit;
+  font-size: 14px;
 }
 .post-navigation .navigation-arrow {
   line-height: 1;
   display: flex;
   align-items: center;
   text-transform: uppercase;
+  gap: 4px;
+  font-weight: 600;
+  margin-bottom: 4px;
 }
 .post-navigation svg {
   padding-right: 8px;
@@ -832,6 +833,7 @@ nav.breadcrumb .separator {
   padding-top: 56.25%;
   overflow: hidden;
   border-radius: 6px;
+  background-color: #e5e5e5;
 }
 .loop-card .card-thumbnail img {
   position: absolute;
@@ -1256,7 +1258,7 @@ nav.rank-math-breadcrumb p {
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  background: var(--jelly-color-text);
+  background: var(--jelly-color-primary);
   position: absolute;
   left: -5px;
   top: 12px;
@@ -1275,6 +1277,10 @@ nav.rank-math-breadcrumb p {
 .wp-block-rank-math-toc-block nav a {
   color: var(--jelly-color-text);
   font-size: 14px;
+}
+.wp-block-rank-math-toc-block nav a:hover {
+  color: var(--jelly-color-primary);
+  text-decoration: underline;
 }
 
 @media screen and (max-width: 767px) {
