--- a/assets/dev/plugin.scss
+++ b/assets/dev/plugin.scss
@@ -156,7 +156,7 @@ nav.rank-math-breadcrumb p {
                     width: 9px;
                     height: 9px;
                     border-radius: 50%;
-                    background: var(--jelly-color-text);
+                    background: var(--jelly-color-primary);
                     position: absolute;
                     left: -5px;
                     top: 12px;
@@ -177,6 +177,10 @@ nav.rank-math-breadcrumb p {
         a {
             color: var(--jelly-color-text);
             font-size: 14px;
+            &:hover {
+                color: var(--jelly-color-primary);
+                text-decoration: underline;
+            }
         }
     }
 }
