--- a/assets/dev/widget.scss
+++ b/assets/dev/widget.scss
@@ -338,15 +338,19 @@ nav.breadcrumb {
     display: flex;
     justify-content: space-between;
     margin: 24px 0;
-    p {
+    .navigation-title{
         margin: 0;
         color: inherit;
+        font-size: 14px;
     }
     .navigation-arrow {
         line-height: 1;
         display: flex;
         align-items: center;
         text-transform: uppercase;
+        gap: 4px;
+        font-weight: 600;
+        margin-bottom: 4px;
     }
     svg {
         padding-right: 8px;
@@ -521,7 +525,6 @@ nav.breadcrumb {
             width: 100%;
             height: 100%;
             object-fit: cover; // 确保图片覆盖整个容器
-
             transition: transform 0.3s ease;
             &:hover {
                 transform: scale(1.1);
