--- a/elementor/css/e-front-end.scss
+++ b/elementor/css/e-front-end.scss
@@ -163,6 +163,17 @@ div.elementor-menu-toggle {
     }
 }
 
+.elementor-widget-container .container{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.elementor-widget-container .breadcrumb{
+    border: 0;
+    padding: 0;
+}
+
 @media screen and (max-width: 1240px) {
     .elementor-nav-menu--main .elementor-nav-menu ul {
         box-shadow: none;
