--- a/assets/dev/widget.css
+++ b/assets/dev/widget.css
@@ -2,6 +2,11 @@
 /**
  * 小部件样式
  */
+a.button .ri-icon {
+  font-weight: 400;
+  margin-right: 6px;
+}
+
 /**************************************************/
 /* 站点图标  widgets/site-logo.php */
 /**************************************************/
@@ -81,10 +86,6 @@
 .primary-menu a.button {
   background-color: var(--jelly-color-primary);
   color: var(--jelly-color-white);
-}
-.primary-menu a.button .ri-icon {
-  font-weight: 400;
-  margin-right: 6px;
 }
 .primary-menu .sub-menu {
   display: none;
@@ -616,6 +617,56 @@ nav.breadcrumb .separator {
 }
 
 /**************************************************/
+/* CTA 区块 */
+/**************************************************/
+.wp-block-cta {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  color: #fff;
+  box-sizing: border-box;
+  margin: 16px 0;
+}
+.wp-block-cta::before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.wp-block-cta .wp-block-cta__caption,
+.wp-block-cta .wp-block-cta__button {
+  position: relative;
+  z-index: 1;
+}
+.wp-block-cta .wp-block-cta__caption {
+  flex: 1;
+  margin-right: 30px;
+}
+.wp-block-cta .wp-block-cta__caption h3 {
+  font-size: 2em;
+  margin-bottom: 0.5em;
+  color: #fff;
+}
+.wp-block-cta .wp-block-cta__caption p {
+  font-size: 14px;
+  color: #ccc;
+  margin: 0;
+}
+.wp-block-cta .wp-block-cta__button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+/**************************************************/
 /* 平板端适配 */
 /**************************************************/
 @media screen and (max-width: 1240px) {
@@ -744,6 +795,16 @@ nav.breadcrumb .separator {
   }
   .page-banner {
     min-height: 150px;
+  }
+  .wp-block-cta {
+    flex-direction: column;
+  }
+  .wp-block-cta .wp-block-cta__caption {
+    margin-right: 0;
+    margin-bottom: 24px;
+  }
+  .wp-block-cta .wp-block-cta__button {
+    align-items: flex-start;
   }
 }
 /**************************************************/
