--- a/assets/dev/widget.scss
+++ b/assets/dev/widget.scss
@@ -1,6 +1,10 @@
 /**
  * 小部件样式
  */
+a.button .ri-icon {
+    font-weight: 400;
+    margin-right: 6px;
+}
 
 /**************************************************/
 /* 站点图标  widgets/site-logo.php */
@@ -85,11 +89,6 @@
         &.button {
             background-color: var(--jelly-color-primary);
             color: var(--jelly-color-white);
-            // width: 100%;
-            .ri-icon {
-                font-weight: 400;
-                margin-right: 6px;
-            }
         }
     }
 
@@ -338,7 +337,7 @@ nav.breadcrumb {
     display: flex;
     justify-content: space-between;
     margin: 24px 0;
-    .navigation-title{
+    .navigation-title {
         margin: 0;
         color: inherit;
         font-size: 14px;
@@ -646,6 +645,57 @@ nav.breadcrumb {
 }
 
 /**************************************************/
+/* CTA 区块 */
+/**************************************************/
+.wp-block-cta {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    color: #fff;
+    box-sizing: border-box;
+    margin: 16px 0;
+    &::before {
+        content: "";
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+    .wp-block-cta__caption,
+    .wp-block-cta__button {
+        position: relative;
+        z-index: 1;
+    }
+    .wp-block-cta__caption {
+        flex: 1;
+        margin-right: 30px;
+        h3 {
+            font-size: 2em;
+            margin-bottom: 0.5em;
+            color: #fff;
+        }
+
+        p {
+            font-size: 14px;
+            color: #ccc;
+            margin: 0;
+        }
+    }
+    .wp-block-cta__button {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+    }
+}
+
+/**************************************************/
 /* 平板端适配 */
 /**************************************************/
 @media screen and (max-width: 1240px) {
@@ -791,6 +841,17 @@ nav.breadcrumb {
     }
     .page-banner {
         min-height: 150px;
+    }
+
+    .wp-block-cta {
+        flex-direction: column;
+        .wp-block-cta__caption {
+            margin-right: 0;
+            margin-bottom: 24px;
+        }
+        .wp-block-cta__button {
+            align-items: flex-start;
+        }
     }
 }
 
