--- a/assets/dev/footer.scss
+++ b/assets/dev/footer.scss
@@ -2,6 +2,7 @@
     // margin-top: 36px;
     background-color: #0a0d14;
     color: #cccccc;
+    pad
     .site-name {
         font-weight: 600;
         font-size: 2.5em;
@@ -14,7 +15,7 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
-        padding: 48px 0 24px 0;
+        padding: 64px 0 24px 0;
         border-bottom: 1px solid #2d323f;
         a {
             display: block;
@@ -36,7 +37,7 @@
         }
         .footer-item-title {
             font-size: 22px;
-            // color: #fff;
+            color: #fff;
             font-weight: 600;
         }
         ul {
@@ -57,19 +58,16 @@
                 }
             }
         }
-        .footer-item-hr {
-            width: 50px;
-            height: 3px;
-            display: block;
-            background: var(--jelly-color-primary);
-            margin: 12px 0;
-        }
     }
     .copyright {
-        margin: 0;
-        border-top: 1px solid #2d323f;
-        padding: 16px 0;
-        width: 100%;
+        background-color: #141414;
+        border-radius: 6px;
+        .copyright-text{
+            color: #fff;
+            font-size: 14px;
+            margin: 0;
+            padding: 16px;
+        }
     }
 }
 @media screen and (max-width: 767px) {
